--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-DOXYGEN Version 1.8.0
+DOXYGEN Version 1.8.0-20120317
 
 Please read the installation section of the manual 
 (http://www.doxygen.org/install.html) for instructions.
