--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
-DOXYGEN Version 1.8.0-20120429
+DOXYGEN Version 1.8.1
 
 Please read the installation section of the manual 
 (http://www.doxygen.org/install.html) for instructions.
 
 --------
-Dimitri van Heesch (29 April 2012)
+Dimitri van Heesch (19 May 2012)
