--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-DOXYGEN Version 1.8.0_20120429
+DOXYGEN Version 1.8.1
 
 Please read INSTALL for compilation instructions.
 
@@ -26,4 +26,4 @@ forum.
 
 Enjoy,
 
-Dimitri van Heesch (dimitri@stack.nl) (29 April 2012)
+Dimitri van Heesch (dimitri@stack.nl) (19 May 2012)
